--- a/eFoodShop/src/main/resources/application.properties
+++ b/eFoodShop/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+# Host and port settings
+server.port=8080
+redis.host=localhost
+redis.port=6379
 
+# Oracle connection settings
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.username=SHINHAN_TRAINING
+spring.datasource.password=1
+
+# JPA settings
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
+spring.jpa.hibernate.ddl-auto=update
