add swagger for api documentation

--- a/food/src/main/resources/application.properties
+++ b/food/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
 spring.jpa.hibernate.ddl-auto=none
+
+# Swagger settings
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
