--- a/food/src/main/resources/application.properties
+++ b/food/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.jpa.hibernate.ddl-auto=none
 
 # Swagger settings
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+# Image settings
+spring.servlet.multipart.max-file-size = 5MB
+spring.servlet.multipart.max-request-size = 5MB
