add config server

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
 
   <modules>
     <module>food</module>
+    <module>ManagerInfo</module>
+    <module>configserver</module>
   </modules>
 
   <dependencyManagement>
