--- a/food/src/main/resources/application.properties
+++ b/food/src/main/resources/application.properties
@@ -1,16 +1,16 @@
-# Host and port settings
-server.port=8081
-
-# Oracle connection settings
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:nhanlocaldb
-spring.datasource.username=NHAN2
-spring.datasource.password=123456
-
-# JPA settings
-spring.jpa.defer-datasource-initialization=true
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
-spring.jpa.hibernate.ddl-auto=none
+## Host and port settings
+#server.port=8081
+#
+## Oracle connection settings
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:nhanlocaldb
+#spring.datasource.username=NHAN2
+#spring.datasource.password=123456
+#
+## JPA settings
+#spring.jpa.defer-datasource-initialization=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
+#spring.jpa.hibernate.ddl-auto=none
 
 # Swagger settings
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
