--- a/shipper/src/main/resources/application.properties
+++ b/shipper/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.password=123456
 # spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
 # JPA/Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+
