--- a/food/src/main/resources/application.properties
+++ b/food/src/main/resources/application.properties
@@ -18,4 +18,8 @@ spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 # Image settings
 spring.servlet.multipart.max-file-size = 5MB
 spring.servlet.multipart.max-request-size = 5MB
-food-image.server.url=http://localhost:8081/image-food/
+food-image.server.url=http://localhost:8081/image-food
+
+gateway.path=http://localhost:8765
+
+#server.servlet.context-path=/storage
