--- a/food/src/main/resources/bootstrap.yml
+++ b/food/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@ spring:
     config:
       uri: http://localhost:8888
   application:
-    name: eFoodShop
+    name: food
   profiles:
     active: dev
 
