--- a/configserver/src/main/resources/application.properties
+++ b/configserver/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=config-server
 server.port=8888
 
-spring.cloud.config.server.git.uri=https://github.com/LHN2225/eFoodShop/property-profile
+spring.cloud.config.server.git.uri=https://github.com/LHN2225/eFoodShop
 spring.cloud.config.server.default-label=nhan-microservice-separation
