--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -6,23 +6,11 @@ spring:
     name: gateway
   cloud:
     gateway:
-      globalcors:
-        corsConfigurations:
-          '[/**]':
-            allowedOrigins: "*"
-            allowedMethods:
-              - GET
-              - POST
-              - PUT
-              - DELETE
-              - OPTIONS
-            allowedHeaders:
-              - content-type
       routes:
         - id: food
-          uri: lb://EFOODSHOP/
+          uri: lb://FOOD/
           predicates:
-            - Path=/**
+            - Path=/food/**
 
 eureka:
   client:
