add storage service

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     <module>configserver</module>
     <module>eureka-server</module>
     <module>gateway</module>
+    <module>storage</module>
   </modules>
 
   <dependencyManagement>
