--- a/food/src/main/resources/application.properties
+++ b/food/src/main/resources/application.properties
@@ -18,6 +18,6 @@ spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 # Image settings
 spring.servlet.multipart.max-file-size = 5MB
 spring.servlet.multipart.max-request-size = 5MB
-food-image.server.url=../food/image-food
+food-image.server.url=../storage/image-food
 
 server.servlet.context-path=/food
