--- a/configserver/src/main/resources/config-data/ManagerInfo-dev.properties
+++ b/configserver/src/main/resources/config-data/ManagerInfo-dev.properties
@@ -8,3 +8,5 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
 spring.jpa.hibernate.ddl-auto=update
+
+server.servlet.context-path=/manager-info
