--- a/shipper/src/main/resources/application.properties
+++ b/shipper/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # Database
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+# spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.url=jdbc:oracle:thin:@host.docker.internal:1521:orcl
 # spring.datasource.url=jdbc:oracle:thin:@LAPTOP-ILJUIVTL:1521:orcl
 spring.datasource.username=EFOODSHOP
 spring.datasource.password=123456
