--- a/cart/src/main/resources/application.properties
+++ b/cart/src/main/resources/application.properties
@@ -1,13 +1,15 @@
-# Host and port settings
-server.port=8080
+## Host and port settings
+#server.port=8080
+#
+## Oracle connection settings
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcldb
+#spring.datasource.username=FOODSERVICEV2
+#spring.datasource.password=123456
+#
+## JPA settings
+#spring.jpa.defer-datasource-initialization=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
+#spring.jpa.hibernate.ddl-auto=update
 
-# Oracle connection settings
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcldb
-spring.datasource.username=FOODSERVICEV2
-spring.datasource.password=123456
-
-# JPA settings
-spring.jpa.defer-datasource-initialization=true
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
-spring.jpa.hibernate.ddl-auto=update
+server.servlet.context-path=/cart
