Create link from 1 microservice to another

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     <module>storage</module>
     <module>cart</module>
     <module>shipper</module>
+    <module>user-service</module>
   </modules>
 
   <dependencyManagement>
