--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -31,6 +31,10 @@ spring:
           uri: lb://SHIPPER/
           predicates:
             - Path=/shipper/**
+        - id: virtualfoodcartorder
+          uri: lb://VIRTUAL_FOOD_CART_ORDER/
+          predicates:
+            - Path=/api/**
 
 eureka:
   client:
