--- a/configserver/src/main/resources/config-data/user-dev.properties
+++ b/configserver/src/main/resources/config-data/user-dev.properties
@@ -1,7 +1,7 @@
 # Oracle connection settings
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:nhanlocaldb
-spring.datasource.username=NHAN2
-spring.datasource.password=123456
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.username=mydb
+spring.datasource.password=password
 
 # JPA settings
 spring.jpa.defer-datasource-initialization=true
