--- a/virtual_food_cart_order/src/main/resources/bootstrap.yml
+++ b/virtual_food_cart_order/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@ spring:
     config:
       uri: http://localhost:8888
   application:
-    name: virtualfoodcartorder
+    name: virtual
   profiles:
     active: dev
 
