--- a/configserver/src/main/resources/config-data/virtual-dev.properties
+++ b/configserver/src/main/resources/config-data/virtual-dev.properties
@@ -1,7 +1,9 @@
+server.port=9092
+
 # Oracle connection settings
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
-spring.datasource.username=EFOODSHOP
-spring.datasource.password=123456
+spring.datasource.username=SHINHAN_TRAINING
+spring.datasource.password=1
 
 # JPA settings
 spring.jpa.defer-datasource-initialization=true
@@ -9,3 +11,5 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
 spring.jpa.hibernate.ddl-auto=update
 
+# App config
+app-config.page-size=5
