--- a/configserver/src/main/resources/config-data/user-dev.properties
+++ b/configserver/src/main/resources/config-data/user-dev.properties
@@ -1,7 +1,7 @@
 # Oracle connection settings
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
-spring.datasource.username=mydb
-spring.datasource.password=password
+spring.datasource.username=SHINHAN_TRAINING
+spring.datasource.password=1
 
 # JPA settings
 spring.jpa.defer-datasource-initialization=true
