--- a/config-data/food-qa.properties
+++ b/config-data/food-qa.properties
@@ -1,10 +1,10 @@
 # Oracle connection settings
-spring.datasource.url=jdbc:oracle:thin:@host.docker.internal:1521:orcl
-spring.datasource.username=SHINHAN_TRAINING
-spring.datasource.password=1
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:nhanlocaldb
+spring.datasource.username=NHAN
+spring.datasource.password=123456
 
 # JPA settings
 spring.jpa.defer-datasource-initialization=true
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
 spring.jpa.hibernate.ddl-auto=update
