--- a/configserver/src/main/resources/application.properties
+++ b/configserver/src/main/resources/application.properties
@@ -6,4 +6,4 @@ server.port=8888
 
 spring.profiles.active=native
 spring.cloud.config.server.native.search-locations=classpath:/config-data
-eureka.client.serviceUrl.defaultZone= ${EUREKA_SERVER:http://localhost:8761/eureka}
+eureka.client.serviceUrl.defaultZone= ${EUREKA_SERVER:http://eureka-server:8761/eureka}
