--- a/food/src/main/resources/application.properties
+++ b/food/src/main/resources/application.properties
@@ -20,4 +20,15 @@ spring.servlet.multipart.max-file-size = 5MB
 spring.servlet.multipart.max-request-size = 5MB
 food-image.server.url=../storage/image-food
 
+# Oracle connection settings
+spring.datasource.url=jdbc:oracle:thin:@host.docker.internal:1521:orcl
+spring.datasource.username=SHINHAN_TRAINING
+spring.datasource.password=1
+
+# JPA settings
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
+spring.jpa.hibernate.ddl-auto=update
+
 server.servlet.context-path=/food
