--- a/storage/src/main/resources/bootstrap.yml
+++ b/storage/src/main/resources/bootstrap.yml
@@ -13,4 +13,4 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: ${EUREKA_SERVER:http://eureka-server:8761/eureka}
