--- a/virtual_food_cart_order/src/main/resources/application.properties
+++ b/virtual_food_cart_order/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+# Oracle connection settings
+spring.datasource.url=jdbc:oracle:thin:@host.docker.internal:1521:orcl
+spring.datasource.username=SHINHAN_TRAINING
+spring.datasource.password=1
 
+# JPA settings
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
+spring.jpa.hibernate.ddl-auto=update
